@@ -3,6 +3,9 @@
 	* dbus-sharp/:
 	Update to dbus-sharp 0.4.2
 
+	* src/TagView.cs, src/TagSelector.cs, po/POTFILES.in:
+	One more l10n patch from Lukasz on bug #428933.
+
 2007-04-12  Brandon Hale  <brandon@brandonhale.us>
 	
 	Reduce libsexy requirement to 0.1.5 for SLED.
